@@ -9,12 +9,12 @@
  */
 class LOOP_DEVICE : public AUDIO_IO {
 
-  int registered_inputs_rep;
-
   int id_rep;
   int writes_rep;
+  int registered_inputs_rep;
   int registered_outputs_rep;
 
+  bool writes_finished_rep, finished_rep;
   bool filled_rep;
     
   SAMPLE_BUFFER sbuf;
@@ -33,7 +33,7 @@ class LOOP_DEVICE : public AUDIO_IO {
   virtual void read_buffer(SAMPLE_BUFFER* sbuf);
   virtual void write_buffer(SAMPLE_BUFFER* sbuf);
 
-  virtual bool finished(void) const { return(true); }
+  virtual bool finished(void) const;
   virtual void seek_position(void) { } 
 
   virtual string parameter_names(void) const { return("label,id_number"); }
